.do/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cm-fe
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: cm-fe
